--- a/artists/templates/artists/artist_form.html
+++ b/artists/templates/artists/artist_form.html
@@ -1,5 +1,13 @@
 {% extends 'main.html' %}
 
+{%block extrahead%}
+    
+    {% load static %}
+
+    <link rel="stylesheet" href = "{% static 'artists/style.css' %}">
+
+{%endblock extrahead%}
+
 {%block content%}
 
     <div>
