feat: make error messages display in red on the top of albums form

--- a/albums/templates/albums/album_form.html
+++ b/albums/templates/albums/album_form.html
@@ -1,5 +1,12 @@
 {% extends 'main.html' %}
 
+{%block extrahead%}
+    
+    {% load static %}
+
+    <link rel="stylesheet" href = "{% static 'artists/style.css' %}">
+
+{%endblock extrahead%}
 
 {% block content %}
     
